--- a/style/style.css
+++ b/style/style.css
@@ -121,12 +121,12 @@ body {
 /* portal block placement */
 
 .portalBlock {
-    background: url(https://static.wikia.nocookie.net/minecraft_gamepedia/images/7/75/Nether_Portal_%28texture%29_JE2-a1.gif/revision/latest?cb=20200511210852);
+    background: url(../img/blockTextures/netherPortal.gif);
     background-size: contain;
 }
 
 .skyBlock.portalBlock:hover{
-    background: url(https://static.wikia.nocookie.net/minecraft_gamepedia/images/7/75/Nether_Portal_%28texture%29_JE2-a1.gif/revision/latest?cb=20200511210852);;
+    background: url(../img/blockTextures/netherPortal.gif);
     background-size: contain;
 }
 
